Can not use CodeCache::unallocated_capacity() with fragmented CodeCache

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • hs21
    • Affects Version/s: hs21
    • Component/s: hotspot
    • None
    • b05
    • generic
    • generic
    • Not verified

        In the bug report 7009641 there was no space left in CodeCache to create vtable_stub but unallocated_capacity() reports that it still has 600Kb of free space. But free space is very fragmented and the largest free block is only 384 bytes.

        Code Cache [0xf35ff000, 0xf75ff000, 0xf75ff000)
         total_blobs=31835 nmethods=31389 adapters=372 free_code_cache=629120 largest_free_block=384

        http://vmsqe.russia.sun.com/execution/results/JDK7/PROMOTION/VM/PERMGEN/7/b129_permgen/2011-02-17/SerialGC/bigapps/linux-i586/client/comp/linux-i586_bigapps__client_comp_runThese/runThese/

              Assignee:
              Vladimir Kozlov
              Reporter:
              Vladimir Kozlov
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: