7025742: Can not use CodeCache::unallocated_capacity() with fragmented CodeCache

Use largest_free_block() instead of unallocated_capacity().

Reviewed-by: iveresov, never, ysr